@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+  <maintainer>
+    <email>martin@mvath.de</email>
+    <name>Martin Väth</name>
+	<description>Upstream developer, assign bugs</description>
+  </maintainer>
+  <maintainer>
+    <email>darkside@gentoo.org</email>
+    <name>Jeremy Olexa</name>
+	<description>Proxy committer, CC bugs</description>
+  </maintainer>
+  <use>
+	<flag name="debug">Build with upstream's CXXFLAGS/LDFLAGS for debugging support; not recommended for normal use.</flag>
+	<flag name="dep">Make DEP=true the default which enables support for {,R,P}DEPEND but requires roughly double disk and memory.</flag>
+	<flag name="doc">Create description of the eix cache file additionally in html format</flag>
+	<flag name="nls">Support foreign language messages (experimental; currently only de)</flag>
+	<flag name="optimization">Accept upstream's choices for CXXFLAGS/LDFLAGS for optimization. Absense of this USE flag does not strip user's *FLAGS</flag>
+	<flag name="security">This adds some checks which can prevent certain exploits if e.g. the eix code has a bug. If you use the hardened toolchain, using this flag does not increase security and can even lead to problems. </flag>
+	<flag name="strong-optimization">Adds several more agressive CXXFLAGS/LDFLAGS for optimization like graphite (if available). May cause trouble with some buggy compiler versions. Absense of this USE flag does not strip user's *FLAGS</flag>
+	<flag name="sqlite">Compile in support for portage's sqlite backend; to actually use it you need additional configuration of portage and eix</flag>
+	<flag name="tools">Create separate binary for script helper tools (currently only: versionsort); useful if they are called extremely often</flag>
+  </use>
+</pkgmetadata>
