@@ -1,0 +1,6 @@
+# ChangeLog for app-portage/eix
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+  16 Apr 2012; Martin Väth <martin@mvath.de>
+  Bump from the tree to make live ebuild; remove previous ChangeLog
