@@ -4,6 +4,9 @@
 
 *magus-1.3.3 (28 May 2011)
 
+  16 Apr 2012; Martin Väth <martin@mvath.de>
+  Use eautopoint
+
   15 Apr 2012; Martin Väth <martin@mvath.de>
   Inherit base
 
